# usipipo-backend

./: .dockerignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QWEN.md  README.md  alembic.ini  docker-compose.yml  example.env  mypy.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/CODE_QUALITY_RULES/: 01-kiss-principle.md  02-delete-code-fearlessly.md  04-atomic-commits.md  05-explain-simply.md
.github/plans/: MIGRATION-PROGRESS.md
.github/workflows/: ci.yml
deploy/: .env.template  README.md  usipipo-backend.service  usipipo-backend.service.example
docs/: API.md
migrations/: env.py
migrations/versions/: 731a6e4ffeb3_add_subscription_transactions_table.py
scripts/: install-systemd-service.sh
src/: __main__.py  main.py
src/core/application/exceptions/: __init__.py  domain_exceptions.py
src/core/application/services/: __init__.py  admin_key_service.py  admin_server_service.py  admin_stats_service.py  admin_user_service.py  billing_service.py  consumption_billing_activation.py  consumption_billing_cycle.py  consumption_billing_service.py  consumption_invoice_service.py  consumption_vpn_integration_service.py  crypto_payment_service.py  data_package_service.py  notification_service.py  payment_service.py  referral_service.py  subscription_payment_service.py  subscription_service.py  ticket_service.py  user_service.py  vpn_infrastructure_service.py  vpn_service.py  wallet_management_service.py  wallet_pool_service.py
src/core/domain/interfaces/: __init__.py  i_admin_service.py  i_consumption_billing_repository.py  i_consumption_invoice_repository.py  i_crypto_order_repository.py  i_crypto_transaction_repository.py  i_data_package_repository.py  i_payment_repository.py  i_referral_repository.py  i_subscription_repository.py  i_subscription_transaction_repository.py  i_ticket_repository.py  i_user_repository.py  i_vpn_key_repository.py  i_vpn_repository.py
src/infrastructure/api/v1/: deps.py
src/infrastructure/jobs/: key_cleanup_job.py  usage_sync_job.py
src/infrastructure/payment_gateways/: telegram_stars_client.py  tron_dealer_client.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: __init__.py  consumption_billing_model.py  consumption_invoice_model.py  crypto_transaction_model.py  data_package_model.py  subscription_plan_model.py  subscription_transaction_model.py  ticket_message_model.py  ticket_model.py  user_model.py  vpn_key_model.py  wallet_model.py
src/infrastructure/persistence/repositories/: __init__.py  consumption_invoice_repository.py  crypto_order_repository.py  crypto_transaction_repository.py  data_package_repository.py  payment_repository.py  referral_repository.py  subscription_repository.py  subscription_transaction_repository.py  ticket_repository.py  user_repository.py  vpn_key_repository.py  vpn_repository.py  wallet_pool_repository.py  wallet_repository.py  (+1 more)
src/infrastructure/vpn_providers/: __init__.py  outline_client.py  wireguard_client.py
src/shared/: config.py
src/shared/schemas/: __init__.py  admin.py  auth.py  consumption_invoice.py  payment.py  referral.py  ticket.py  vpn.py
src/shared/security/: __init__.py  jwt.py  telegram_auth.py
tests/: conftest.py  test_main.py
tests/integration/: test_auth.py  test_billing.py  test_consumption_invoices.py  test_data_packages.py  test_payments.py  test_referrals.py  test_subscriptions.py  test_tickets.py  test_vpn.py  test_vpn_infrastructure.py  test_wallets.py  test_webhooks.py
tests/unit/: test_consumption_invoice_repository.py  test_data_package_repository.py  test_data_package_service.py  test_referral_repository.py  test_referral_service.py  test_subscription_repository.py  test_subscription_service.py  test_subscription_transaction_repository.py  test_ticket_repository.py  test_ticket_service.py
(+14 files in other folders)
